force-app/main/default/objects/Hearing__c/fields/All_Hearing_Dates__c.field-meta.xml
<CustomField>
    <fullName>All_Hearing_Dates__c</fullName>
    <description>Stores all hearing dates</description>
    <inlineHelpText>Please key in dates in Month Day, YYYY; followed by a comma to separate multi-hearing dates (excluding the Meeting Start and Meeting End Dates).</inlineHelpText>
    <label>All Hearing Dates</label>
    <type>TextArea</type>
</CustomField>