force-app/main/default/objects/Hearing__c/fields/Audio_telephone__c.field-meta.xml
<CustomField>
    <fullName>Audio_telephone__c</fullName>
    <label>Audio (telephone)</label>
    <type>TextArea</type>
</CustomField>