force-app/main/default/objects/Hearing__c/fields/Berman_Clerk__c.field-meta.xml
<CustomField>
    <fullName>Berman_Clerk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the person serving as the Berman Clerk for this meeting.</inlineHelpText>
    <label>Berman Clerk</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Meetings (Berman Clerk)</relationshipLabel>
    <relationshipName>Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>