force-app/main/default/objects/Hearing__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Lookup to parent case. Used for easy identification and for rules related to referrals that deal with hearing dates.</description>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Hearings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>