force-app/main/default/objects/Hearing__c/fields/Case_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Case_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the Case Deputy User ID. Not on the page layout.</description>
    <label>Case Deputy User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>