force-app/main/default/objects/Hearing__c/fields/Date_Cure_Must_Be_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Cure_Must_Be_Completed__c</fullName>
    <label>Date Cure Must Be Completed</label>
    <type>Date</type>
</CustomField>