force-app/main/default/objects/Hearing__c/fields/Date_Documents_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Date_Documents_Mailed__c</fullName>
    <description>Date field to capture when forms were sent via certified mail or service by mail; for the WCA 66 output.</description>
    <label>Date Documents Mailed</label>
    <type>Date</type>
</CustomField>