force-app/main/default/objects/Hearing__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>