force-app/main/default/objects/Hearing__c/fields/DLSE_Attorney__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Attorney__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DLSE Attorney</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Meetings (DLSE Attorney)</relationshipLabel>
    <relationshipName>BOFE_Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>