force-app/main/default/objects/Hearing__c/fields/Documents_Sent__c.field-meta.xml
<CustomField>
    <fullName>Documents_Sent__c</fullName>
    <description>Field to capture what forms were sent via certified mail or service by mail; for the WCA 66 output.</description>
    <label>Documents Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notice of Hearing, Complaint and Answer</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing, Complaint, Answer and Attachment</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing and Citation(s)</fullName>
            </value>
            <value>
                <fullName>Notice of Continuance Granted</fullName>
            </value>
            <value>
                <fullName>Letter Denying Continuance</fullName>
            </value>
            <value>
                <fullName>Notice of Continuance/Reset</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing, Amended Complaint and Answer</fullName>
            </value>
            <value>
                <fullName>Notice of Continuance/Reset, Amended Complaint and Answer</fullName>
            </value>
            <value>
                <fullName>Notice of Continuance/Reset, Complaint and Answer</fullName>
            </value>
            <value>
                <fullName>Amended Complaint</fullName>
            </value>
            <value>
                <fullName>Notice of Continuance/Reset, Amended Complaint, Attachments and Answer</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing, Complaint, Answer and Suspended Corporation Letter</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing Time Change</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing pursuant to Labor Code Section 98(f)</fullName>
            </value>
            <value>
                <fullName>Notice of Reset of Hearing pursuant to Labor Code Section 98(f)</fullName>
            </value>
            <value>
                <fullName>Order On Application For Relief Under Labor Code Section 98(f)</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award - 75C, 75D</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award - 75C, 75D, Notice of Payment Due &amp; Appeal Bond Requirement</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award - 75C, 75G</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award - 75C, 75G, Notice of Payment Due &amp; Appeal Bond Requirement</fullName>
            </value>
            <value>
                <fullName>Findings of Fact and Conclusions - 75R</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award by Settlement</fullName>
            </value>
            <value>
                <fullName>Amended Order, Decision or Award</fullName>
            </value>
            <value>
                <fullName>Order, Decision or Award Nunc Pro Tunc</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
            <value>
                <fullName>Judgment and Collections Instructions Letter</fullName>
            </value>
            <value>
                <fullName>Judgment Copy and Notice of Entry of Judgment</fullName>
            </value>
            <value>
                <fullName>Judgment, Lien(s) and Notice of Entry of Judgment</fullName>
            </value>
            <value>
                <fullName>Judgment and Wage Claimant Post-Hearing Worksheet</fullName>
            </value>
            <value>
                <fullName>Judgment, Assignment Letter and Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>