force-app/main/default/objects/Hearing__c/fields/Employee_Request_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Request_Hearing_Date__c</fullName>
    <label>Employee Request Hearing Date</label>
    <type>Date</type>
</CustomField>