force-app/main/default/objects/Hearing__c/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <inlineHelpText>Cannot be more than 20160 minutes (14 days)</inlineHelpText>
    <label>Estimated Duration (in minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>