force-app/main/default/objects/Hearing__c/fields/EXVR_Amount__c.field-meta.xml
<CustomField>
    <fullName>EXVR_Amount__c</fullName>
    <label>EXVR-Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>