force-app/main/default/objects/Hearing__c/fields/EXVR_Interest__c.field-meta.xml
<CustomField>
    <fullName>EXVR_Interest__c</fullName>
    <label>EXVR-Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>