force-app/main/default/objects/Hearing__c/fields/Failure_to_Appear__c.field-meta.xml
<CustomField>
    <fullName>Failure_to_Appear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by vfp when entering hearing results. Also on W CA meetings when applicable to a Plaintiff.</description>
    <inlineHelpText>Appellant / Plaintiff failed to appear at meeting.</inlineHelpText>
    <label>Failure to Appear</label>
    <type>Checkbox</type>
</CustomField>