force-app/main/default/objects/Hearing__c/fields/Findings_Reviewed_by_Sr__c.field-meta.xml
<CustomField>
    <fullName>Findings_Reviewed_by_Sr__c</fullName>
    <label>Findings Reviewed by Sr.</label>
    <type>Date</type>
</CustomField>