force-app/main/default/objects/Hearing__c/fields/Findings_Submitted_to_Sr__c.field-meta.xml
<CustomField>
    <fullName>Findings_Submitted_to_Sr__c</fullName>
    <label>Findings Submitted to Sr.</label>
    <type>Date</type>
</CustomField>