force-app/main/default/objects/Hearing__c/fields/Hearing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Deadline__c</fullName>
    <label>Hearing Deadline</label>
    <type>Date</type>
</CustomField>