force-app/main/default/objects/Hearing__c/fields/IC_Alleged_at_Hearing__c.field-meta.xml
<CustomField>
    <fullName>IC_Alleged_at_Hearing__c</fullName>
    <label>IC Alleged at Hearing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>