force-app/main/default/objects/Hearing__c/fields/IC_Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>IC_Determination_Date__c</fullName>
    <description>Used for legacy imported data</description>
    <inlineHelpText>Date IC was determined related to this meeting.</inlineHelpText>
    <label>IC Determination Date</label>
    <type>Date</type>
</CustomField>