force-app/main/default/objects/Hearing__c/fields/IEE_Amount__c.field-meta.xml
<CustomField>
    <fullName>IEE_Amount__c</fullName>
    <label>IEE - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>