force-app/main/default/objects/Hearing__c/fields/IEE_VR_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>IEE_VR_Amount_Paid__c</fullName>
    <label>IEE-VR-Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>