force-app/main/default/objects/Hearing__c/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>For data migration purpose</description>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>