force-app/main/default/objects/Hearing__c/fields/M_R_Interest__c.field-meta.xml
<CustomField>
    <fullName>M_R_Interest__c</fullName>
    <label>M&amp;R- Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>