force-app/main/default/objects/Hearing__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <type>TextArea</type>
</CustomField>