force-app/main/default/objects/Hearing__c/fields/Meeting_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Date_Time__c</fullName>
    <inlineHelpText>Cannot be more than 14 days after Meeting Start Date/Time</inlineHelpText>
    <label>Meeting End Date/Time</label>
    <type>DateTime</type>
</CustomField>