force-app/main/default/objects/Hearing__c/fields/Meeting_Location_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location_Other_Text__c</fullName>
    <label>Meeting Location Other Text</label>
    <type>TextArea</type>
</CustomField>