force-app/main/default/objects/Hearing__c/fields/Meeting_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Office_Email__c</fullName>
    <formula>WCA_Office__r.Office_Email__c</formula>
    <label>Meeting Office Email</label>
    <type>Text</type>
</CustomField>