force-app/main/default/objects/Hearing__c/fields/Meeting_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The internal employee the meeting was originally scheduled to be held by. May or not be who actually holds the hearing.</description>
    <inlineHelpText>Lookup the employee that the meeting was scheduled to be held by.</inlineHelpText>
    <label>Meeting Scheduled For</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>DIR_Employee__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Meetings (Meeting Scheduled For)</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>