force-app/main/default/objects/Hearing__c/fields/Meeting_Scheduled_For_Email__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled_For_Email__c</fullName>
    <description>Meeting Scheduled for Email Field updated with a work flow rule and used in Dismissal notification email alert. Please do not delete</description>
    <label>Meeting Scheduled For Email</label>
    <type>Email</type>
</CustomField>