force-app/main/default/objects/Hearing__c/fields/Meeting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Date__c</fullName>
    <formula>DATEVALUE( Meeting_Start_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Start Date</label>
    <type>Date</type>
</CustomField>